# brainrot

./: .env  .gitignore  .golangci.yml  Cargo.toml  README.md  buf.gen.yaml  buf.yaml  collab-core.toml.sample  docker-compose.yaml  go.mod  go.sum  justfile  tools.go
.goctl/1.7.0/model/: customized.tpl  err.tpl  find-one-by-field-extra-method.tpl  find-one-by-field.tpl  find-one.tpl  model.tpl
.goctl/1.7.0/rpc/: logic.tpl  svc.tpl
api/brainrot/: brainrot.go
api/brainrot/gatewayoption/: withmetadata.go
api/brainrot/middleware/swagger/: brainrot.swagger.json  dist.go  initializer.go
api/brainrot/middleware/swagger/proto/: brainrot.swagger.json
api/makabaka/: makabaka.go
api/makabaka/gatewayoption/: errhandler.go  incomingheadermatcher.go  marshaler.go
api/makabaka/middleware/swagger/: dist.go  initializer.go  makabaka.swagger.json  swagger.go
collab-core/: Cargo.toml
collab-core/src/: lib.rs  main.rs
collab-core/src/config/: mod.rs
collab-core/src/listener/: websocket.rs
collab-core/src/room/: actor.rs  mod.rs
collab-core/src/storage/: actor.rs  mod.rs  s3.rs
model/: articlemodel.go  articlemodel_gen.go  commentmodel.go  commentmodel_gen.go  tagmodel.go  tagmodel_gen.go  usermodel.go  usermodel_gen.go  vars.go
pb/brainrot/: brainrot.pb.go  brainrot.pb.gw.go  brainrot_grpc.pb.go
pb/makabaka/: makabaka.pb.go  makabaka.pb.gw.go  makabaka_grpc.pb.go
pkg/apikey/: apikey.go
pkg/grpcinterceptor/: unaryserverinterceptors.go
pkg/grpcinterceptor/auth/: auth.go  macauthenticator.go
pkg/grpcinterceptor/auth/apikey/: apikeyauthenticator.go
pkg/grpcinterceptor/auth/mac/: macauthenticator.go
pkg/mac/: mac.go
pkg/merror/: error.go  spawn.go  var.go
pkg/util/: aes.go  rand.go  sha256.go  tostring.go
pkg/util/validator/: validator.go
proto/: brainrot.proto  makabaka.proto
rpc/brainrot/: brainrot.go
rpc/brainrot/client/article/: article.go
rpc/brainrot/client/comment/: comment.go
rpc/brainrot/client/ping/: ping.go
rpc/brainrot/client/s3/: s3.go
rpc/brainrot/client/user/: user.go
rpc/brainrot/etc/: brainrot.yaml
rpc/brainrot/internal/config/: config.go
rpc/brainrot/internal/svc/: servicecontext.go
rpc/makabaka/: makabaka.go
rpc/makabaka/client/article/: article.go
rpc/makabaka/client/ping/: ping.go
rpc/makabaka/client/user/: user.go
rpc/makabaka/etc/: makabaka.yaml
rpc/makabaka/internal/svc/: servicecontext.go
sql/brainrot/: article.sql  comment.sql  tag.sql  user.sql
sql/makabaka/: user.sql
(+45 files in other folders)
