[workspace]
resolver = "2"
members = ["collab-core"]

[workspace.dependencies]
actix = "0.13"
anyhow = "1.0"
bytes = "1.7"
config = { version = "0.14", default-features = false }
fastwebsockets = "0.8"
http-body-util = "0.1"
hyper = "1.4"
hyper-util = "0.1"
loro = "0.16"
opendal = "0.49"
rustc-hash = "2.0"
serde = "1.0"
tokio = "1.40"
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.5"
